--- a/demo/index.html
+++ b/demo/index.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -78,7 +78,7 @@
                 porta nibh.
             </p>
         </div>
-    </div> 
+    </div>
 </body>
 
 </html>
