add resize handler to demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -21,6 +21,7 @@
         window.addEventListener('load', function() {
             styleEqualHeight.add('.box');
         });
+        window.addEventListener('resize', styleEqualHeight.trigger);
     </script>
 </head>
 
